# ArgoMCP

./: .gitignore  README.md  agno.db  pyproject.toml  requirements.txt  run.sh
examples/: agno.db  demo1.py  demo2.py  demo3.py  logTitle.py  main.py
knowledge/: chelsey_info.txt
output/: antonette.md
src/argomcp/agent/: Agent.py
src/argomcp/context/: log_context.py
src/argomcp/llm/: ChatDoubao.py  ChatOpenAI.py
src/argomcp/mcp/: MCPClient.py
src/argomcp/rag/: EmbeddingRetriver.py  VectorStore.py
